<resources>
    <string name="app_name">Camping Trip Planner</string>
    <string name="create_trip">Create Trip</string>
    <string name="select_trip">Select Trip</string>
    <string name="view_trip">View Trip</string>
    <string name="name">Name:</string>
    <string name="location">Location:</string>
    <string name="arrival_date">Arrival Date:</string>
    <string name="departure_date">Departure Date:</string>
    <string name="camping_gear">Camping Gear:</string>
    <string name="not_selected">(Not Selected)</string>
    <string name="none">(None)</string>
    <string name="tent">Tent:</string>
    <string name="sleeping_bag">Sleeping Bag:</string>
    <string name="food">Food:</string>
    <string name="eggs">Eggs:</string>
    <string name="bacon">Bacon:</string>
    <string name="save">SAVE</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="name_placeholder">Mount Mitchell</string>
    <string name="location_placeholder">35, 82</string>
    <string name="date_placeholder">12/16/19 - 12/20/19</string>
    <string name="tent_placeholder">1x Tent</string>
    <string name="sleeping_bag_placeholder">1x Sleeping Bag</string>
    <string name="eggs_placeholder">1x Eggs</string>
    <string name="bacon_placeholder">1x Bacon</string>
    <string name="weather_placeholder">Currently: 68°F</string>
    <string name="create_trip_method_name">createTrip</string>
    <string name="select_trip_method_name">selectTrip</string>
    <string name="select">SELECT</string>
    <string name="cancel">CANCEL</string>
    <string name="mapInstruction">Tap a location on the map to place a marker:</string>
    <string name="mapButtonContentDescription">Select location from map</string>
    <string name="departureButtonContentDescription">Set departure date</string>
    <string name="arrivalButtonContentDescription">Set arrival date</string>
    <string name="tentDecrementButtonContentDescription">Decrease tent count</string>
    <string name="tentIncrementButtonContentDescription">Increase tent count</string>
    <string name="sleepingBagDecrementButtonContentDescription">Decrease sleeping bag count</string>
    <string name="sleepingBagIncrementButtonContentDescription">Increase sleeping bag count</string>
    <string name="eggsDecrementButtonContentDescription">Decrease eggs count</string>
    <string name="eggsIncrementButtonContentDescription">Increase eggs count</string>
    <string name="baconDecrementButtonContentDescription">Decrease bacon count</string>
    <string name="baconIncrementButtonContentDescription">Increase bacon count</string>
    <string name="googleMapsButtonContentDescription">See location in google maps app</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="name_lowercase">name</string>
    <string name="location_lowercase">location</string>
    <string name="arrival_lowercase">arrival</string>
    <string name="departure_lowercase">departure</string>
    <string name="tent_lowercase">tent</string>
    <string name="bag_lowercase">bag</string>
    <string name="eggs_lowercase">eggs</string>
    <string name="bacon_lowercase">bacon</string>
    <string name="original_marker_title">Marker at Mt. Mitchell</string>
    <string name="date_format_pattern">MM/dd/yyyy</string>
    <string name="database_name">database-name</string>
    <string name="tid">tid</string>
    <string name="google_maps_package">com.google.android.apps.maps</string>
    <string name="open_weather_map_base_url">https://api.openweathermap.org/</string>
    <string name="currently">Currently:&#160;</string>
    <string name="degrees_fahrenheit">°F</string>
    <string name="tent_quantity">x Tent</string>
    <string name="bag_quantity">x Sleeping Bag</string>
    <string name="eggs_quantity">x Eggs</string>
    <string name="bacon_quantity">x Bacon</string>
    <string name="hybrid_string">Hybrid</string>
    <string name="normal_string">Normal</string>
    <string name="satellite_string">Satellite</string>
    <string name="terrain_string">Terrain</string>
    <string name="select_location">Select Location</string>
    <string name="share">SHARE</string>
    <string name="title_activity_main_compose_material3">MainActivityComposeMaterial3</string>
</resources>
