<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">
<androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
android:layout_width="match_parent"
android:layout_height="?attr/actionBarSize"
app:navigationIcon="?attr/homeAsUpIndicator"
app:titleTextColor="@color/colorAccent"
android:background="@color/colorPrimaryDark"
    ></androidx.appcompat.widget.Toolbar>

<ScrollView
android:layout_width="match_parent"
android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        app:layout_constraintLeft_toLeftOf="@+id/nameTextView"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateRangeTextView"
        android:text="@string/date_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView"
        app:layout_constraintLeft_toLeftOf="@+id/locationTextView"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/tentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tent_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/dateRangeTextView"
        app:layout_constraintLeft_toLeftOf="@+id/dateRangeTextView"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/sleepingBagTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleeping_bag_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/tentTextView"
        app:layout_constraintLeft_toLeftOf="@+id/tentTextView"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/eggsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eggs_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/sleepingBagTextView"
        app:layout_constraintLeft_toLeftOf="@+id/sleepingBagTextView"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/baconTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bacon_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/eggsTextView"
        app:layout_constraintLeft_toLeftOf="@+id/eggsTextView"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/weatherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/baconTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"/>

    <ImageView
        android:id="@+id/viewLocationButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorAccent"
        android:src="@drawable/ic_gps_not_fixed_primary_dark_40dp"
        app:layout_constraintBottom_toBottomOf="@+id/locationTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/locationTextView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editDeleteButtonsLinearLayout"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherTextView"
        app:layout_constraintBottom_toBottomOf="parent">

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/edit"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:background="@color/colorAccent"
        android:text="@string/delete"
        android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</LinearLayout>