<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTripActivity"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        tools:layout_editor_absoluteX="-64dp"
        android:background="@color/colorPrimaryDark" >
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/location"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/arrival_date"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/departure_date"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/campingGearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/camping_gear"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/tentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tent"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/campingGearTextView"
        app:layout_constraintTop_toBottomOf="@+id/campingGearTextView" />

    <TextView
        android:id="@+id/sleepingBagTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sleeping_bag"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tentTextView"
        app:layout_constraintTop_toBottomOf="@+id/tentTextView" />

    <TextView
        android:id="@+id/foodTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/food"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/sleepingBagTextView" />

    <TextView
        android:id="@+id/eggsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/eggs"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/foodTextView"
        app:layout_constraintTop_toBottomOf="@+id/foodTextView" />

    <TextView
        android:id="@+id/baconTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bacon"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/eggsTextView"
        app:layout_constraintTop_toBottomOf="@+id/eggsTextView" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageView
        android:id="@+id/button3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorAccent"
        android:src="@drawable/ic_gps_not_fixed_primary_dark_40dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <ImageView
        android:id="@+id/button4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_date_range_primary_dark_40dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <ImageView
        android:id="@+id/button5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_date_range_primary_dark_40dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <ImageView
        android:id="@+id/tentIncrementButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_add_box_black_40dp"

        app:layout_constraintBottom_toBottomOf="@+id/tentTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tentTextView" />

    <TextView
        android:id="@+id/tentEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tentIncrementButton"
        app:layout_constraintEnd_toStartOf="@+id/tentIncrementButton"
        app:layout_constraintTop_toTopOf="@+id/tentIncrementButton" />

    <ImageView
        android:id="@+id/tentDecrementButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_indeterminate_check_box_yellow_40dp"
        app:layout_constraintBottom_toBottomOf="@+id/tentEditText"
        app:layout_constraintTop_toTopOf="@+id/tentEditText"
        app:layout_constraintRight_toLeftOf="@+id/tentEditText"/>

    <ImageView
        android:id="@+id/sleepingBagIncrementButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_add_box_black_40dp"

        app:layout_constraintBottom_toBottomOf="@+id/sleepingBagTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sleepingBagTextView" />

    <TextView
        android:id="@+id/sleepingBagEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/sleepingBagIncrementButton"
        app:layout_constraintEnd_toStartOf="@+id/sleepingBagIncrementButton"
        app:layout_constraintTop_toTopOf="@+id/sleepingBagIncrementButton" />

    <ImageView
        android:id="@+id/sleepingBagDecrementButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_indeterminate_check_box_yellow_40dp"
        app:layout_constraintBottom_toBottomOf="@+id/sleepingBagEditText"
        app:layout_constraintTop_toTopOf="@+id/sleepingBagEditText"
        app:layout_constraintRight_toLeftOf="@+id/sleepingBagEditText"/>

    <ImageView
        android:id="@+id/eggsIncrementButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_add_box_black_40dp"

        app:layout_constraintBottom_toBottomOf="@+id/eggsTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/eggsTextView" />

    <TextView
        android:id="@+id/eggsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/eggsIncrementButton"
        app:layout_constraintEnd_toStartOf="@+id/eggsIncrementButton"
        app:layout_constraintTop_toTopOf="@+id/eggsIncrementButton" />

    <ImageView
        android:id="@+id/eggsDecrementButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_indeterminate_check_box_yellow_40dp"
        app:layout_constraintBottom_toBottomOf="@+id/eggsEditText"
        app:layout_constraintTop_toTopOf="@+id/eggsEditText"
        app:layout_constraintRight_toLeftOf="@+id/eggsEditText"/>

    <ImageView
        android:id="@+id/baconIncrementButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_add_box_black_40dp"

        app:layout_constraintBottom_toBottomOf="@+id/baconTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/baconTextView" />

    <TextView
        android:id="@+id/baconEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/baconIncrementButton"
        app:layout_constraintEnd_toStartOf="@+id/baconIncrementButton"
        app:layout_constraintTop_toTopOf="@+id/baconIncrementButton" />

    <ImageView
        android:id="@+id/baconDecrementButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_indeterminate_check_box_yellow_40dp"
        app:layout_constraintBottom_toBottomOf="@+id/baconEditText"
        app:layout_constraintTop_toTopOf="@+id/baconEditText"
        app:layout_constraintRight_toLeftOf="@+id/baconEditText"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/none"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/none"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/none"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/baconTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>